2008-04-06  Ludovic Courtès  <ludo@gnu.org>

	* standalone/test-asmobs-lib.c, standalone/test-conversion.c,
	standalone/test-gh.c, standalone/test-list.c,
	standalone/test-num2integral.c, standalone/test-round.c: Make
	sure "config.h" is included first; use angle brackets for
	<config.h> and <libguile.h>.

2008-03-13  Ludovic Courtès  <ludo@gnu.org>

	* tests/socket.test (temp-file-path): New.  Replace calls to
	`tmpnam' with calls to `temp-file-path', so that `$TMPDIR' is
	honored.
	* standalone/test-unwind.c (check_ports): Honor `$TMPDIR'.

2008-03-12  Ludovic Courtès  <ludo@gnu.org>

	* tests/srfi-37.test (short options without arguments): New
	test.

2008-02-23  Neil Jerram  <neil@ossau.uklinux.net>

	* standalone/test-with-guile-module.c: Updated to GNU coding
	standards; added standard license statement.

2008-02-15  Ludovic Courtès  <ludo@gnu.org>

	* tests/gc.test (gc): Add hack to clean up the stack so that the
	test passes on SPARC.

2008-02-01  Neil Jerram  <neil@ossau.uklinux.net>

	* standalone/Makefile.am: Add stanza for test-with-guile-module.

	* standalone/test-with-guile-module.c: New test.

2008-01-22  Neil Jerram  <neil@ossau.uklinux.net>

	* COPYING: Removed.

2008-01-18  Neil Jerram  <neil@ossau.uklinux.net>

	* tests/hash.test: New "hashx" test supplied by Gregory Marton;
	prior to today's fix in libguile/hashtab.c, this caused a
	segmentation fault.

2007-12-29  Neil Jerram  <neil@ossau.uklinux.net>

	* standalone/test-bad-identifiers: New test.
	(top level): Explain the point of this test.

	* standalone/Makefile.am (check_SCRIPTS, TESTS): Add it.

2007-12-13  Stephen Compall  <s11@member.fsf.org>

	* tests/srfi-69.test (SRFI-69)[can use all arguments, including
	size]: New test.

2007-12-03  Stephen Compall  <s11@member.fsf.org>

	* tests/srfi-69.test: New file.
	* Makefile.am: Add it.

2007-10-19  Neil Jerram  <neil@ossau.uklinux.net>

	* tests/eval.test (promises)[unmemoizing a promise]: New test.
